--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
 <body>
     <h1>Lorem ipsum dolor, sit amet consectetur adipisicing.</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla dolorem debitis porro repellat, officia nesciunt mollitia in sint quas quaerat ducimus deserunt, fugiat error blanditiis voluptatum odio, asperiores adipisci nihil!</p>
+    <ul>
+        <li>Home </li>
+        <li>About Us</li>
+        <li>Contact Us</li>
+    </ul>
 </body>
 </html>
